# rust-apk

./: .gitignore  Cargo.toml  Makefile  README.md  eframe_template-c60145d5b552c9c0.js  eframe_template-c60145d5b552c9c0_bg.wasm  index.html
java/app/src/main/: AndroidManifest.xml
java/app/src/main/java/local/eframe_template/: MainActivity.java
src/: lib.rs  main.rs
